   (.a or .lib), and a FASL (*.fasb). This can be used, to replace existing
   systems with precompiled ones.

 - ECL restores the habit of installing manual pages for ecl and ecl-config.

 - We have removed the obsolete versions of the documentation files. The
   up to date documentation now lives in a separate source repository,
   as explained in http://ecls.sourceforge.net/download.html

ECL 10.3.1:
===========

This release has three important focuses: performance improvements in various
fronts (garbage collection and hash tables), extending the run-process function
and important fixes to let ECL work better with Slime. To quote one lisper
ECL "this feels like a real Lisp implementation now"

* Bugs fixed:

 - DIRECTORY used stat() also on files that did not match the directory masks.

 - The syntax for matching strings in DIRECTORY is now the same as in
   PATHNAME-MATCH-P. Formerly there were small differences, such as DIRECTORY
   understanding characters #\? and #\\ and PATHNAME-MATCH-P not.

 - Standalone executables do not require the existence of the ECLDIR directory
   to start up -- it may be required, though, for working Unicode because the
   encodings are stored there.

 - PROCESS-JOIN was exported from the wrong package.

 - PROCESS-JOIN failed when invoked with a thread that was in the process of
   being set up.

 - The output values of a process or thread are now collected in the process
   object and returned by PROCESS-JOIN.

 - ECL's interrupt servicing thread could not be shut down.

 - When compiling LET forms, ECL emitted warnings about removal of variables
   even when they were declared IGNORABLE.

 - An internal variable MP:*ALLOW-WITH-INTERRUPTS* was not declared special.

 - The compiler now understands function type proclamations with &OPTIONAL
   values.

 - The compiler now accepts THE special forms with a VALUES type.

 - If file A.lsp explicitely loads B.lsp to use a package that is only defined