@@ -1131,7 +1131,7 @@ cl_symbols[] = {
 {SYS_ "INTERPRETER-STACK", SI_ORDINARY, si_interpreter_stack, -1, OBJNULL},
 {SYS_ "LINK-FROM", SI_ORDINARY, NULL, -1, OBJNULL},
 {SYS_ "LINK-TO", SI_ORDINARY, NULL, -1, OBJNULL},
-{SYS_ "LOAD-SOURCE", SI_ORDINARY, si_load_source, 3, OBJNULL},
+{SYS_ "LOAD-SOURCE", SI_ORDINARY, si_load_source, 4, OBJNULL},
 {SYS_ "LOGICAL-PATHNAME-P", SI_ORDINARY, si_logical_pathname_p, 1, OBJNULL},
 {SYS_ "MACRO", SI_ORDINARY, NULL, -1, OBJNULL},
 {SYS_ "MAKE-LAMBDA", SI_ORDINARY, si_make_lambda, 2, OBJNULL},
@@ -1632,7 +1632,7 @@ cl_symbols[] = {
 {SYS_ "*ALIEN-DECLARATIONS*", SI_SPECIAL, NULL, -1, Cnil},
 
 #ifdef ENABLE_DLOPEN
-{SYS_ "LOAD-BINARY", SI_ORDINARY, si_load_binary, 3, OBJNULL},
+{SYS_ "LOAD-BINARY", SI_ORDINARY, si_load_binary, 4, OBJNULL},
 #endif
 
 {SYS_ "*CODE-WALKER*", SI_SPECIAL, NULL, -1, OBJNULL},
@@ -1883,6 +1883,9 @@ cl_symbols[] = {
 {EXT_ "LISP-IMPLEMENTATION-VCS-ID", EXT_ORDINARY, NULL, -1, Cnil},
 
 {SYS_ "SIGNAL-SERVICING", SI_ORDINARY, NULL, -1, Cnil},
+
+{EXT_ "*DEFAULT-EXTERNAL-FORMAT*", EXT_SPECIAL, NULL, -1, Ct},
+{KEY_ "PASS-THROUGH", KEYWORD, NULL, -1, OBJNULL},
 
 /* Tag for end of list */
 {NULL, CL_ORDINARY, NULL, -1, OBJNULL}};
