@@ -1884,5 +1884,8 @@ cl_symbols[] = {
 
 {SYS_ "SIGNAL-SERVICING",NULL},
 
+{EXT_ "*DEFAULT-EXTERNAL-FORMAT*",NULL},
+{KEY_ "C-LOCALE",NULL},
+
 /* Tag for end of list */
 {NULL,NULL}};
